--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/special-elite": "^4.5.7",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
