--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fontsource/permanent-marker": "^4.5.5",
     "@fontsource/shadows-into-light": "^4.5.8",
     "@fontsource/special-elite": "^4.5.7",
+    "@fontsource/stardos-stencil": "^4.5.6",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
